--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "new-tg-bot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "node index.js"
-  },
-  "author": "Islombek",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^17.2.3",
-    "node-telegram-bot-api": "^0.66.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.11"
-  }
+	"name": "new-tg-bot",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"type": "module",
+	"scripts": {
+		"start": "node index.js",
+		"dev": "nodemon index.js"
+	},
+	"author": "Islombek",
+	"license": "ISC",
+	"dependencies": {
+		"dotenv": "^17.2.3",
+		"node-telegram-bot-api": "^0.66.0"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.11"
+	}
 }
